# kmath

./: CMakeLists.txt
src/: kint.cpp  kint.hpp  kmath.cpp  kmath.hpp
